git-svn-id: https://deluge-siphon.googlecode.com/svn/trunk@6 d0f773b1-da4e-23c3-c3ab-6f5bd0db0e2f

--- a/manifest.json
+++ b/manifest.json
@@ -17,7 +17,7 @@
   ],
   "content_scripts": [{
     "all_frames": true,
-    "matches":    ["http://*/*", "https://*/*", "ftp://*/*", "file://*/*"],
+    "matches":    ["http://*/*", "https://*/*", "ftp://*/*"], 
     "js":         ["content_handler.js"],
     "css":	  ["content_styles.css"]
   }],
