--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "DelugeSiphon",
-  "version": "0.63.1",
+  "version": "0.63.2",
   "description": "Adds links to a remote Deluge server",
   "browser_action": {
     "defaultTitle":"DelugeSiphon",
@@ -14,13 +14,14 @@
   },
   "permissions": [
 	"http://*/*",
-	"contextMenus"
+	"contextMenus",
+	"notifications"
   ],
   "content_scripts": [{
     "all_frames": true,
     "matches":    ["http://*/*", "https://*/*", "ftp://*/*"], 
     "js":         ["content_handler.js"],
-    "css":	  ["content_styles.css"]
+    "css":	  []
   }],
   "options_page": "options.html",
   "background_page": "controller.html"
