--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "DelugeSiphon",
-  "version": "0.63.4",
+  "version": "0.63.5",
   "description": "Adds links to a remote Deluge server",
   "browser_action": {
     "defaultTitle":"DelugeSiphon",
@@ -13,7 +13,9 @@
     "128": "icon-128.png" 
   },
   "permissions": [
-	"http://*/*",
+	"http://*/*", 
+	"https://*/*", 
+	"ftp://*/*",
 	"contextMenus",
 	"notifications"
   ],
