Updated to manifest_version 2, updated the manifest background page configuration (scripts only, removed controller.html), removed options.html inline script and placed into options_actions.js (v2 requirement)

--- a/manifest.json
+++ b/manifest.json
@@ -25,6 +25,9 @@
     "js":         ["content_handler.js"],
     "css":	  []
   }],
+  "manifest_version": 2,
   "options_page": "options.html",
-  "background_page": "controller.html"
+  "background": {
+    "scripts": [ "JSON.js","controller_communicator.js", "controller_actions.js" ]
+  }
 }
