--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,8 @@
 {
   "manifest_version": 2,
   "name": "DelugeSiphon",
-  "version": "0.66.1",
+  "short_name": "DelugeSiphon",
+  "version": "0.66.2",
   "description": "Send your links to a Deluge server.",
   "browser_action": {
     "defaultTitle": "DelugeSiphon",
