--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gulp-concat": "^2.6.1",
     "gulp-copy": "0.0.2",
     "gulp-notify": "^2.2.0",
+    "gulp-plumber": "^1.1.0",
     "gulp-uglify": "^2.0.0",
     "gulp-uglifycss": "^1.0.6"
   }
