--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gulp-copy": "0.0.2",
     "gulp-notify": "^2.2.0",
     "gulp-plumber": "^1.1.0",
+    "gulp-sourcemaps": "^1.9.1",
     "gulp-uglify": "^2.0.0",
     "gulp-uglifycss": "^1.0.6"
   }
