bool options from "add with options" now also work to disable enabled settiings"

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "homepage": "https://sbussetti.github.io/deluge-siphon/",
   "devDependencies": {
+    "gulp": "^3.9.1",
     "gulp-concat": "^2.6.1",
     "gulp-copy": "0.0.2",
     "gulp-notify": "^2.2.0",
