--- a/manifest.json
+++ b/manifest.json
@@ -2,9 +2,11 @@
   "manifest_version": 2,
   "name": "delugesiphon",
   "short_name": "delugesiphon",
-  "version": "0.72.3",
-  "description": "Send your links to a Deluge server.",
+  "version": "0.72.4",
+  "default_locale": "en",
+  "description": "Send torrent links to your Deluge server.",
   "homepage_url": "http://sbussetti.github.io/deluge-siphon/",
+  "author": "sbussetti",
   "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'",
   "browser_action": {
     "defaultTitle": "delugesiphon",
